--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -9,8 +9,8 @@ crons = ["* * * * *"]
 
 [[d1_databases]]
 binding = "DB"
-database_name = "xugou_db"
-database_id = "32a2ca5f-3a77-4b08-965e-804612557880"
+database_name = "xugou-db"
+database_id = "982e4ffd-e548-408e-b443-c700c5ccbf1a"
 
 [version_metadata]
 binding = "CF_VERSION_METADATA"
